# vid2dataset

./: .gitignore  CHANGELOG.md  LICENSE  README.md  TESTING.md  USAGE.md  build_exe.py  build_exe_gpu.py  install.bat  launch.pyw  pyproject.toml
.github/workflows/: ci.yml
docs/: ROADMAP.md  v1.0_tagging_design.md
src/vid2dataset/: __init__.py  __main__.py  advanced.py  app.py  async_writer.py  auto_quality.py  cli.py  color_diversity.py  completeness.py  config.py  crop.py  dedup.py  diversity.py  extractor.py  gallery.py  gpu_filters.py  gpu_runtime.py  gui.py  hardware.py  i18n.py  io_utils.py  keyframe_decoder.py  quality.py  report.py  resize.py  scene.py  tagger.py  tagger_runtime.py  tooltip.py  updater.py  watermark.py
src/vid2dataset/presets/: __init__.py  anima-character.toml  anima-style.toml  fast-preview.toml
tests/: test_advanced.py  test_config.py  test_crop.py  test_dedup.py  test_gpu_filters.py  test_gpu_runtime.py  test_io_utils.py  test_quality.py  test_report.py  test_resize.py  test_tagger.py  test_watermark.py
